# Deep-Unfolding-for-Sparse-Signal-Recovery

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/applications/: audio_inpainter.hpp  compressed_sensing.hpp  doa_estimator.hpp
include/evaluation/: metrics.hpp  timer.hpp
include/math/: complex_utils.hpp  matrix_utils.hpp  soft_threshold.hpp
include/neural/: alista_network.hpp  layer.hpp  lista_network.hpp  weights_loader.hpp
include/solvers/: fista_solver.hpp  ista_solver.hpp  music_doa.hpp  solver_base.hpp
include/utils/: config.hpp  csv_writer.hpp  wav_io.hpp
scripts/: generate_presentation_figs.py  plot_ablation.py  plot_audio_waveforms.py  plot_doa_rmse_vs_snr.py  plot_doa_spectrum.py  plot_nmse_vs_iterations.py  plot_speed_accuracy.py
src/: main.cpp
src/applications/: audio_inpainter.cpp  compressed_sensing.cpp  doa_estimator.cpp
src/benchmarks/: bench_ablation.cpp  bench_audio.cpp  bench_doa.cpp  bench_speed.cpp  bench_synthetic.cpp
src/neural/: alista_network.cpp  lista_network.cpp  weights_loader.cpp
src/solvers/: fista_solver.cpp  ista_solver.cpp  music_doa.cpp
tests/: test_ista_convergence.cpp  test_lista_matches_ista.cpp  test_soft_threshold.cpp  test_steering_vector.cpp  test_weights_loader.cpp
training/: check_lista.py  data_generator.py  debug_lista.py  doa_data_generator.py  export_weights.py  export_weights_format.md  requirements.txt  train_alista.py  train_lista.py  visualization.py
